// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 42px;
  -ms-flex: 0 0 42px;
  flex: 0 0 42px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
  padding-left: calc(48px / 6);
  padding-left: calc(48px / 6);
}

<div
  class="c0"
>
  <input
    aria-label="select-row-456"
    data="[object Object]"
    name="select-row-456"
    style="font-size: 18px; cursor: pointer;"
    type="checkbox"
  />
</div>
`;

exports[`should render correctly if a selectableRowsComponent is provided 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 42px;
  -ms-flex: 0 0 42px;
  flex: 0 0 42px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
  padding-left: calc(48px / 6);
  padding-left: calc(48px / 6);
}

<div
  class="c0"
>
  <div>
    hahah
  </div>
</div>
`;

exports[`should render correctly if a selectableRowsComponent is provided with selectableRowsComponentProps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 42px;
  -ms-flex: 0 0 42px;
  flex: 0 0 42px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  line-height: normal;
  font-size: 13px;
  color: rgba(0,0,0,.87);
  min-height: 48px;
  padding-left: calc(48px / 6);
  padding-left: calc(48px / 6);
}

<div
  class="c0"
>
  <div>
    hahah
  </div>
</div>
`;
